--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,21 +1,22 @@
 name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
-  name_jobs_exaple:
+  init:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 16.x ]
+        node-varsion: [ 17.x ]
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - name: Starting Node.js ${{ matrix.node-version }}
+      - uses: actions/checkout@v3
+      - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: install modulesss
+      - name: install moduless
         run: npm install
-      - name: build projects
+      - name: build project
         run: npm run build
